feat(doc): #2994.152 add asvs ref to some rules
- Added ASVS reference to R025 and R030


Former-commit-id: 3121cd49053f64e54d69ec69fc383a2df8b6a2f5

--- a/content/pages/rules/session/025/index.adoc
+++ b/content/pages/rules/session/025/index.adoc
@@ -66,4 +66,8 @@ authentication details,
 such as credential resets, email or address changes, logging in from unknown or
 risky locations.
 
-. [[r2]] link:https://pcinetwork.org/forum/index.php?threads/pci-dss-3-0-6-5-10-broken-authentication-and-session-management.667/[[PCI DSS 3.0\] 6.5.10 Broken authentication and session management].
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.2 Session Binding Requirements.(3.2.1)]
+Verify the application generates a new session token on user authentication.
+
+. [[r4]] link:https://pcinetwork.org/forum/index.php?threads/pci-dss-3-0-6-5-10-broken-authentication-and-session-management.667/[[PCI DSS 3.0\] 6.5.10 Broken authentication and session management].
