feat(doc): #2994.154 add asvs ref rule 224o
Former-commit-id: 5ba1edde7e4349d728668f28d64ad000387f1d0a

--- a/content/pages/rules/cryptography/224/index.adoc
+++ b/content/pages/rules/cryptography/224/index.adoc
@@ -90,3 +90,8 @@ seeding, and verification.
 V2.9 Cryptographic Software and Devices Verifier Requirements.(2.9.3)]
 Verify that approved cryptographic algorithms are used in the generation,
 seeding, and verification.
+
+. [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.2 Session Binding Requirements.(3.2.4)]
+Verify that session token are generated using approved cryptographic
+algorithms.
