fix(doc): #3345 set language for code snippet
Former-commit-id: fed315ad244d28408b063c9639870ad650eefc74

--- a/content/blog/understanding-ssrf/index.adoc
+++ b/content/blog/understanding-ssrf/index.adoc
@@ -206,6 +206,7 @@ Given that we have access to the search products site,
 then we can make a request and intercept it:
 
 .products request
+[source, bash]
 ----
 POST /code/ HTTP/1.1
 Host: 192.168.56.2
