feat(doc): #2994.156 add refs to rule 141
- Added ASVS and CWE references to R141
- Updated R141 keywords
- Fixed some grammar issues


Former-commit-id: d447fad654293ac97d43793eb5e273f6f2da7849

--- a/content/pages/rules/credentials/141/index.adoc
+++ b/content/pages/rules/credentials/141/index.adoc
@@ -1,17 +1,16 @@
 :slug: rules/141/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of force user re authentication when performing critical operations with sensitive data.
-:keywords: Requirement, Security, Authentication, Credentials, Session, Password
+:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of forcing users to re-authenticate after a password change occurs.
+:keywords: Re-authentication, Force, Password, Change, ASVS, CWE
 :rules: yes
 
 = R141. Force re-authentication
 
 == Requirement
 
-System must force users to re-authenticate
-or invalidate the system session
-once the account's state changes
-(password changing/recovery, lockouts, user deletion, etc).
+The system must force a user to re-authenticate or invalidate their session
+if the state of their account changes
+(password change/recovery, lockouts, user deletion, etc.).
 
 == Findings
 
@@ -19,14 +18,13 @@ once the account's state changes
 
 == References
 
-. [[r1]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-11[+NIST+ 800-53 IA-11]
-Re-authentication: The organization requires users and devices
-to re-authenticate when
-[Assignment: organization-defined circumstances
-or situations requiring re-authentication].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/613.html[CWE-613: Insufficient Session Expiration]
+According to WASC, "Insufficient Session Expiration is when a web site permits
+an attacker to reuse old session credentials or session IDs for authorization."
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.26+]
-Verify that sensitive operations
-(e.g. change password, change email address, add new biller, etc.)
-require re-authentication (e.g. password or 2FA token).
-This is in addition to CSRF measures, not instead.
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.3 Session Logout and Timeout Requirements.(3.3.3)]
+Verify that the application terminates all other active sessions after a
+successful password change,
+and that this is effective across the application, federated login
+(if present), and any relying parties.
