--- a/content/pages/rules/session/028/index.adoc
+++ b/content/pages/rules/session/028/index.adoc
@@ -1,22 +1,40 @@
 :slug: rules/028/
 :category: session
-:description: This document contains the details of the security requirements related to the definition and management of sessions and session variables in the organization. This requirement establishes the importance of allowing users to terminate the session from any protected resource.
-:keywords: Requirement, Security, Session, Logout, User, Resources
+:description: This document contains the details of the security requirements related to the definition and management of sessions and session variables in the organization. This requirement establishes the importance of allowing users to terminate any active sessions that they have.
+:keywords: Session, Logout, Allow, ASVS, CWE, NIST
 :rules: yes
 
-= R028. Allow user logout
+= R028. Allow users to log out
 
 == Requirement
 
-The system must allow users to manually logout
-from any resource protected by authentication.
+The system must allow users to view and manually log out of any or all active
+sessions and devices.
+
+== Description
+
+Session tokens have associated permissions that allow any actor who possesses
+them to perform actions in a system.
+If a user leaves a session open and loses access to the device on which it
+resides,
+anyone with access to the device will be able to use that session.
+Therefore, the system should allow users to view and log out of any active
+session.
 
 == References
 
-. [[r1]] link:https://www.bsimm.com/framework/governance/software-security-metrics-strategy.html[+BSSIM9+ SM2.6:]
+. [[r1]] link:https://www.bsimm.com/framework/governance/software-security-metrics-strategy.html[BSSIM9 SM2.6:]
 Require security sign-off.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V3_Session_Management[+OWASP-ASVS v3.1-3.17+].
-Verify that the application tracks all active sessions.
-And allows users to terminate sessions
-selectively or globally from their account.
+. [[r2]] link:https://cwe.mitre.org/data/definitions/613.html[CWE-613: Insufficient Session Expiration]
+According to WASC, "Insufficient Session Expiration is when a web site permits
+an attacker to reuse old session credentials or session IDs for authorization."
+
+. [[r3]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 7.1 Session Bindings]
+Secrets used for session binding SHALL be erased or invalidated by the session
+subject when the subscriber logs out.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.3 Session Logout and Timeout Requirements.(3.3.4)]
+Verify that users are able to view and log out of any or all currently active
+sessions and devices.
